--- a/index.html
+++ b/index.html
@@ -2,41 +2,7 @@
 <html>
     <head>
         <title>Paint!</title>
-        <style>
-            canvas {
-                border: solid 1px black;
-                float:left;
-            }
-            canvas, canvas:active {
-                cursor: crosshair;
-            }
-            #colorSelect {
-                float: left;
-                list-style-type: none;
-                display: block;
-                margin: 0;
-                padding: 0;
-            }
-            #colorSelect li {
-                width: 50px;
-                height: 50px;
-            }
-            #black {
-                background-color: black;
-            }
-            #blue {
-                background-color: blue;
-            }
-            #red {
-                background-color: red;
-            }
-            #green {
-                background-color: green;
-            }
-            #clear {
-                float:left;
-            }
-        </style>
+        <link rel="stylesheet" href="styles/styles.css" />
     </head>
     <body>
         <canvas id="canvas" height="500" width="500"></canvas>
