move paint script

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
             <li id="green" class="colorButton"></li>
         </ul>
         <button id="clear">Clear</button>
-        <script src="paint.js"></script>
+        <script src="script/paint.js"></script>
     </body>
 </html>
