--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <head>
         <title>Paint!</title>
         <link rel="stylesheet" href="styles/styles.css" />
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+          var socket = io.connect('http://localhost');
+          socket.on('news', function (data) {
+            console.log(data);
+            socket.emit('my other event', { my: 'data' });
+          });
+        </script>
     </head>
     <body>
         <canvas id="canvas" height="500" width="500"></canvas>
@@ -13,6 +21,6 @@
             <li id="green" class="colorButton"></li>
         </ul>
         <button id="clear">Clear</button>
-        <script src="script/paint.js"></script>
+        <script src="scripts/paint.js"></script>
     </body>
 </html>
