--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <script src="/socket.io/socket.io.js"></script>
         <script>
           var socket = io.connect('http://localhost');
-          socket.on('news', function (data) {
-            console.log(data);
+          socket.on('test', function (data) {
+            alert(data);
             socket.emit('my other event', { my: 'data' });
           });
         </script>
