pull in color palette change from @wiringa pull request on master

--- a/index.html
+++ b/index.html
@@ -15,9 +15,149 @@
         <canvas id="canvas" height="500" width="500"></canvas>
         <ul id="colorSelect">
             <li id="black" class="colorButton"></li>
-            <li id="blue" class="colorButton"></li>
-            <li id="red" class="colorButton"></li>
+            <li id="darkgreen" class="colorButton"></li>
+            <li id="darkslategray" class="colorButton"></li>
+            <li id="maroon" class="colorButton"></li>
+            <li id="olive" class="colorButton"></li>
             <li id="green" class="colorButton"></li>
+            <li id="teal" class="colorButton"></li>
+            <li id="navy" class="colorButton"></li>
+            <li id="purple" class="colorButton"></li>
+            <li id="indigo" class="colorButton"></li>
+            <li id="midnightblue" class="colorButton"></li>
+            <li id="darkred" class="colorButton"></li>
+            <li id="darkcyan" class="colorButton"></li>
+            <li id="darkblue" class="colorButton"></li>
+            <li id="darkmagenta" class="colorButton"></li>
+            <li id="darkolivegreen" class="colorButton"></li>
+            <li id="saddlebrown" class="colorButton"></li>
+            <li id="forestgreen" class="colorButton"></li>
+            <li id="olivedrab" class="colorButton"></li>
+            <li id="seagreen" class="colorButton"></li>
+            <li id="darkgoldenrod" class="colorButton"></li>
+            <li id="darkslateblue" class="colorButton"></li>
+            <li id="sienna" class="colorButton"></li>
+            <li id="mediumblue" class="colorButton"></li>
+            <li id="dimgray" class="colorButton"></li>
+            <li id="brown" class="colorButton"></li>
+            <li id="lightseagreen" class="colorButton"></li>
+            <li id="darkturquoise" class="colorButton"></li>
+            <li id="darkviolet" class="colorButton"></li>
+            <li id="firebrick" class="colorButton"></li>
+            <li id="mediumvioletred" class="colorButton"></li>
+            <li id="maroon" class="colorButton"></li>
+            <li id="mediumseagreen" class="colorButton"></li>
+            <li id="chocolate" class="colorButton"></li>
+            <li id="crimson" class="colorButton"></li>
+            <li id="steelblue" class="colorButton"></li>
+            <li id="goldenrod" class="colorButton"></li>
+            <li id="lawngreen" class="colorButton"></li>
+            <li id="mediumspringgreen" class="colorButton"></li>
+            <li id="gray" class="colorButton"></li>
+            <li id="slategray" class="colorButton"></li>
+            <li id="cadetblue" class="colorButton"></li>
+            <li id="yellowgreen" class="colorButton"></li>
+            <li id="limegreen" class="colorButton"></li>
+            <li id="darkorchid" class="colorButton"></li>
+            <li id="red" class="colorButton"></li>
+            <li id="orangered" class="colorButton"></li>
+            <li id="darkorange" class="colorButton"></li>
+            <li id="orange" class="colorButton"></li>
+            <li id="gold" class="colorButton"></li>
+            <li id="yellow" class="colorButton"></li>
+            <li id="chartreuse" class="colorButton"></li>
+            <li id="green" class="colorButton"></li>
+            <li id="lime" class="colorButton"></li>
+            <li id="springgreen" class="colorButton"></li>
+            <li id="aqua" class="colorButton"></li>
+            <li id="cyan" class="colorButton"></li>
+            <li id="deepskyblue" class="colorButton"></li>
+            <li id="blue" class="colorButton"></li>
+            <li id="fuchsia" class="colorButton"></li>
+            <li id="magenta" class="colorButton"></li>
+            <li id="lightslategray" class="colorButton"></li>
+            <li id="peru" class="colorButton"></li>
+            <li id="blueviolet" class="colorButton"></li>
+            <li id="purple" class="colorButton"></li>
+            <li id="deeppink" class="colorButton"></li>
+            <li id="mediumturquoise" class="colorButton"></li>
+            <li id="dodgerblue" class="colorButton"></li>
+            <li id="turquoise" class="colorButton"></li>
+            <li id="royalblue" class="colorButton"></li>
+            <li id="darkkhaki" class="colorButton"></li>
+            <li id="indianred" class="colorButton"></li>
+            <li id="slateblue" class="colorButton"></li>
+            <li id="mediumorchid" class="colorButton"></li>
+            <li id="greenyellow" class="colorButton"></li>
+            <li id="mediumaquamarine" class="colorButton"></li>
+            <li id="tomato" class="colorButton"></li>
+            <li id="rosybrown" class="colorButton"></li>
+            <li id="darkseagreen" class="colorButton"></li>
+            <li id="orchid" class="colorButton"></li>
+            <li id="mediumpurple" class="colorButton"></li>
+            <li id="palevioletred" class="colorButton"></li>
+            <li id="darkgray" class="colorButton"></li>
+            <li id="cornflower" class="colorButton"></li>
+            <li id="coral" class="colorButton"></li>
+            <li id="mediumslateblue" class="colorButton"></li>
+            <li id="sandybrown" class="colorButton"></li>
+            <li id="tan" class="colorButton"></li>
+            <li id="burlywood" class="colorButton"></li>
+            <li id="darksalmon" class="colorButton"></li>
+            <li id="salmon" class="colorButton"></li>
+            <li id="hotpink" class="colorButton"></li>
+            <li id="violet" class="colorButton"></li>
+            <li id="lightcoral" class="colorButton"></li>
+            <li id="skyblue" class="colorButton"></li>
+            <li id="lightsalmon" class="colorButton"></li>
+            <li id="gray" class="colorButton"></li>
+            <li id="silver" class="colorButton"></li>
+            <li id="plum" class="colorButton"></li>
+            <li id="lightgreen" class="colorButton"></li>
+            <li id="khaki" class="colorButton"></li>
+            <li id="aquamarine" class="colorButton"></li>
+            <li id="lightskyblue" class="colorButton"></li>
+            <li id="lightsteelblue" class="colorButton"></li>
+            <li id="lightblue" class="colorButton"></li>
+            <li id="palegreen" class="colorButton"></li>
+            <li id="thistle" class="colorButton"></li>
+            <li id="powderblue" class="colorButton"></li>
+            <li id="palegoldenrod" class="colorButton"></li>
+            <li id="paleturquoise" class="colorButton"></li>
+            <li id="lightgray" class="colorButton"></li>
+            <li id="wheat" class="colorButton"></li>
+            <li id="navajowhite" class="colorButton"></li>
+            <li id="gainsboro" class="colorButton"></li>
+            <li id="peachpuff" class="colorButton"></li>
+            <li id="moccasin" class="colorButton"></li>
+            <li id="lightpink" class="colorButton"></li>
+            <li id="bisque" class="colorButton"></li>
+            <li id="pink" class="colorButton"></li>
+            <li id="lightgoldenrod" class="colorButton"></li>
+            <li id="blanchedalmond" class="colorButton"></li>
+            <li id="lemonchiffon" class="colorButton"></li>
+            <li id="beige" class="colorButton"></li>
+            <li id="antiquewhite" class="colorButton"></li>
+            <li id="papayawhip" class="colorButton"></li>
+            <li id="cornsilk" class="colorButton"></li>
+            <li id="linen" class="colorButton"></li>
+            <li id="lavender" class="colorButton"></li>
+            <li id="mistyrose" class="colorButton"></li>
+            <li id="lightyellow" class="colorButton"></li>
+            <li id="lightcyan" class="colorButton"></li>
+            <li id="oldlace" class="colorButton"></li>
+            <li id="whitesmoke" class="colorButton"></li>
+            <li id="seashell" class="colorButton"></li>
+            <li id="floralwhite" class="colorButton"></li>
+            <li id="ivory" class="colorButton"></li>
+            <li id="honeydew" class="colorButton"></li>
+            <li id="azure" class="colorButton"></li>
+            <li id="aliceblue" class="colorButton"></li>
+            <li id="lavenderblush" class="colorButton"></li>
+            <li id="mintcream" class="colorButton"></li>
+            <li id="snow" class="colorButton"></li>
+            <li id="ghostwhite" class="colorButton"></li>
+            <li id="white" class="colorButton"></li>
         </ul>
         <button id="clear">Clear</button>
         <script src="scripts/paint.js"></script>
